--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <hr/>
 
     <h2>Summary</h2>
-        <p>
+        <p style="width: 50%;">
             I'm Caspian, a 26 year old from <strong>Malmö, Sweden</strong>. I've spent the last 10 years 
             learning as much as I can about marketing and media production. Right now
             I'm making a pivot to development, wanting to find creative ways to solve problems 
