--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <h2>Experiences</h2>
         <h3>Don't Panic Consulting — 2018 - present</h3>
-            <p>
+            <p style="width: 50%;">
                 I've been running my own consultancy firm since 2018. The first three years, 
                 I was full time freelancing after which I've been running it as a side-hustle.
                 Among other things, I produced podcasts, ran and grew multiple SoMe accounts,
@@ -43,7 +43,7 @@
 
 
         <h3>Refined Wiki — Sep - Dec 2023 — Product marketing specialist</h3>
-            <p>
+            <p style="width: 50%;">
                 I was hired as a copywriter, the main focus being writing blog-posts for the self-hosted blog.
                 I was only on the team for about 3 months, as the role didn't really fit. 
                 I learned a lot during my time at Refined though, such as selling to 
